cli/crates/cli/tests/snapshots/auth__authorizer_with_public_access_should_work__todo_creation_should_succeed.snap
---
source: cli/crates/cli/tests/auth.rs
expression: "private_client.gql::<Value>(AUTH_CREATE_MUTATION).await"
---
{
  "data": null,
  "errors": [
    "[RuleError { locations: [Pos(10:6)], message: \"The connector-less `@model` directive is no longer supported.\" }]"
  ]
}
