cli/crates/cli/tests/snapshots/auth__authorizer_with_public_access_should_work__todo_creation_with_public_access_should_fail.snap
---
source: crates/cli/tests/auth.rs
expression: "public_client.gql::<Value>(AUTH_CREATE_MUTATION).await"
---
{
  "data": null,
  "errors": [
    {
      "message": "Unauthorized to access Mutation.todoCreate (missing create operation)"
    }
  ]
}
