cli/crates/cli/tests/snapshots/auth__authorizer_with_public_access_should_work__todo_list_should_succeed.snap
---
source: crates/cli/tests/auth.rs
expression: "private_client.gql::<Value>(AUTH_QUERY_TODOS).await"
---
{
  "data": {
    "todoCollection": {
      "__typename": "TodoConnection",
      "edges": [
        {
          "node": {
            "title": "1"
          }
        }
      ]
    }
  }
}
